--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@
 title: mrallfredii's writeups
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A personal space where I document hacking writeups, CTF solutions, and security research.
+  Focused on learning, breaking things, and understanding how they actually work
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: mrallfredii
